--- a/environment_scf.yml
+++ b/environment_scf.yml
@@ -3,10 +3,24 @@ channels:
   - conda-forge
 dependencies:
   - _libgcc_mutex=0.1=conda_forge
-  - _openmp_mutex=4.5=2_gnu
+  - _openmp_mutex=4.5=2_kmp_llvm
   - annotated-types=0.6.0=pyhd8ed1ab_0
+  - aws-c-auth=0.7.16=h79b3bcb_6
+  - aws-c-cal=0.6.10=hb29e0c7_1
+  - aws-c-common=0.9.13=hd590300_0
+  - aws-c-compression=0.2.18=hecc5fa9_1
+  - aws-c-event-stream=0.4.2=hf9b2f7b_4
+  - aws-c-http=0.8.1=h5d7533a_5
+  - aws-c-io=0.14.5=h50678d4_1
+  - aws-c-mqtt=0.10.2=hf479d2b_4
+  - aws-c-s3=0.5.2=h4ad9680_0
+  - aws-c-sdkutils=0.1.15=hecc5fa9_1
+  - aws-checksums=0.1.18=hecc5fa9_1
+  - aws-crt-cpp=0.26.2=h19f5d62_7
+  - aws-sdk-cpp=1.11.267=h5606698_1
   - brotli-python=1.1.0=py311hb755f60_1
   - bzip2=1.0.8=hd590300_5
+  - c-ares=1.27.0=hd590300_0
   - ca-certificates=2024.2.2=hbcca054_0
   - catalogue=2.0.10=py311h38be061_0
   - certifi=2024.2.2=pyhd8ed1ab_0
@@ -15,42 +29,107 @@ dependencies:
   - cloudpathlib=0.16.0=pyhd8ed1ab_0
   - colorama=0.4.6=pyhd8ed1ab_0
   - confection=0.1.4=py311h781c19f_0
+  - cuda-cudart=12.4.99=hd3aeb46_0
+  - cuda-cudart_linux-64=12.4.99=h59595ed_0
+  - cuda-nvrtc=12.4.99=hd3aeb46_0
+  - cuda-version=12.4=h3060b56_3
+  - cupy=13.0.0=py311h8a5e998_3
+  - cupy-core=13.0.0=py311h84cfafc_3
   - cymem=2.0.8=py311hb755f60_1
   - cython-blis=0.7.10=py311h1f0f07a_2
   - dataclasses=0.8=pyhc8e2a94_3
+  - fastrlock=0.8.2=py311hb755f60_2
+  - filelock=3.13.1=pyhd8ed1ab_0
+  - fsspec=2024.2.0=pyhca7485f_0
+  - gflags=2.2.2=he1b5a44_1004
+  - glog=0.7.0=hed5481d_0
+  - gmp=6.3.0=h59595ed_0
+  - gmpy2=2.1.2=py311h6a5fa03_1
+  - icu=73.2=h59595ed_0
   - idna=3.6=pyhd8ed1ab_0
   - importlib-metadata=7.0.2=pyha770c72_0
   - jinja2=3.1.3=pyhd8ed1ab_0
+  - keyutils=1.6.1=h166bdaf_0
+  - krb5=1.21.2=h659d440_0
   - langcodes=3.3.0=pyhd8ed1ab_0
   - ld_impl_linux-64=2.40=h41732ed_0
+  - libabseil=20230802.1=cxx17_h59595ed_0
+  - libarrow=15.0.0=h17fe1ab_6_cpu
+  - libarrow-acero=15.0.0=h59595ed_6_cpu
+  - libarrow-dataset=15.0.0=h59595ed_6_cpu
+  - libarrow-flight=15.0.0=hdc44a87_6_cpu
+  - libarrow-flight-sql=15.0.0=hfbc7f12_6_cpu
+  - libarrow-gandiva=15.0.0=h308e607_6_cpu
+  - libarrow-substrait=15.0.0=hfbc7f12_6_cpu
   - libblas=3.9.0=21_linux64_openblas
+  - libbrotlicommon=1.1.0=hd590300_1
+  - libbrotlidec=1.1.0=hd590300_1
+  - libbrotlienc=1.1.0=hd590300_1
   - libcblas=3.9.0=21_linux64_openblas
+  - libcrc32c=1.1.2=h9c3ff4c_0
+  - libcublas=12.4.2.65=hd3aeb46_0
+  - libcufft=11.2.0.44=hd3aeb46_0
+  - libcurand=10.3.5.119=hd3aeb46_0
+  - libcurl=8.5.0=hca28451_0
+  - libcusolver=11.6.0.99=hd3aeb46_0
+  - libcusparse=12.3.0.142=hd3aeb46_0
+  - libedit=3.1.20191231=he28a2e2_2
+  - libev=4.33=hd590300_2
+  - libevent=2.1.12=hf998b51_1
   - libexpat=2.6.1=h59595ed_0
   - libffi=3.4.2=h7f98852_5
   - libgcc-ng=13.2.0=h807b86a_5
   - libgfortran-ng=13.2.0=h69a702a_5
   - libgfortran5=13.2.0=ha4646dd_5
   - libgomp=13.2.0=h807b86a_5
+  - libgoogle-cloud=2.17.0=h31df0ca_2
+  - libgoogle-cloud-storage=2.17.0=hc7a4891_2
+  - libgrpc=1.60.1=h74775cd_0
+  - libhwloc=2.9.3=default_h554bfaf_1009
+  - libiconv=1.17=hd590300_2
   - liblapack=3.9.0=21_linux64_openblas
+  - libllvm16=16.0.6=hb3ce162_3
+  - libnghttp2=1.58.0=h47da74e_1
+  - libnl=3.9.0=hd590300_0
   - libnsl=2.0.1=hd590300_0
+  - libnuma=2.0.16=h0b41bf4_1
+  - libnvjitlink=12.4.99=hd3aeb46_0
   - libopenblas=0.3.26=pthreads_h413a1c8_0
+  - libparquet=15.0.0=h352af49_6_cpu
+  - libprotobuf=4.25.1=hf27288f_2
+  - libre2-11=2023.09.01=h7a70373_1
   - libsqlite=3.45.1=h2797004_0
+  - libssh2=1.11.0=h0841786_0
   - libstdcxx-ng=13.2.0=h7e041cc_5
+  - libthrift=0.19.0=hb90f79a_1
+  - libtorch=2.1.2=cpu_mkl_hcefb67d_101
+  - libutf8proc=2.8.0=h166bdaf_0
   - libuuid=2.38.1=h0b41bf4_0
+  - libuv=1.48.0=hd590300_0
   - libxcrypt=4.4.36=hd590300_1
+  - libxml2=2.12.5=h232c23b_0
   - libzlib=1.2.13=hd590300_5
+  - llvm-openmp=17.0.6=h4dfa4b3_0
+  - lz4-c=1.9.4=hcb278e6_0
   - markdown-it-py=3.0.0=pyhd8ed1ab_0
   - markupsafe=2.1.5=py311h459d7ec_0
   - mdurl=0.1.2=pyhd8ed1ab_0
+  - mkl=2023.2.0=h84fe81f_50496
+  - mpc=1.3.1=hfe3b2da_0
+  - mpfr=4.2.1=h9458935_0
+  - mpmath=1.3.0=pyhd8ed1ab_0
   - murmurhash=1.0.10=py311hb755f60_1
   - ncurses=6.4=h59595ed_2
+  - networkx=3.2.1=pyhd8ed1ab_0
   - numpy=1.26.4=py311h64a7726_0
   - openssl=3.2.1=hd590300_0
+  - orc=1.9.2=h7829240_1
   - packaging=23.2=pyhd8ed1ab_0
   - pandas=2.2.1=py311h320fe9a_0
   - pathy=0.10.2=pyhd8ed1ab_0
   - pip=24.0=pyhd8ed1ab_0
   - preshed=3.0.9=py311hb755f60_1
+  - pyarrow=15.0.0=py311h39c9aba_6_cpu
   - pydantic=2.6.3=pyhd8ed1ab_0
   - pydantic-core=2.16.3=py311h46250e7_0
   - pygments=2.17.2=pyhd8ed1ab_0
@@ -59,18 +138,26 @@ dependencies:
   - python-dateutil=2.9.0=pyhd8ed1ab_0
   - python-tzdata=2024.1=pyhd8ed1ab_0
   - python_abi=3.11=4_cp311
+  - pytorch=2.1.2=cpu_mkl_py311hc5c8824_101
   - pytz=2024.1=pyhd8ed1ab_0
+  - rdma-core=50.0=hd3aeb46_0
+  - re2=2023.09.01=h7f4b329_1
   - readline=8.2=h8228510_1
   - requests=2.31.0=pyhd8ed1ab_0
   - rich=13.7.1=pyhd8ed1ab_0
+  - s2n=1.4.5=h06160fa_0
   - setuptools=69.1.1=pyhd8ed1ab_0
   - shellingham=1.5.4=pyhd8ed1ab_0
   - six=1.16.0=pyh6c4a22f_0
+  - sleef=3.5.1=h9b69904_2
   - smart_open=5.2.1=pyhd8ed1ab_0
+  - snappy=1.1.10=h9fff704_0
   - spacy=3.7.2=py311h92ebd52_0
   - spacy-legacy=3.0.12=pyhd8ed1ab_0
   - spacy-loggers=1.0.5=pyhd8ed1ab_0
   - srsly=2.4.8=py311hb755f60_1
+  - sympy=1.12=pypyh9d50eac_103
+  - tbb=2021.11.0=h00ab1b0_1
   - thinc=8.2.2=py311h92ebd52_0
   - tk=8.6.13=noxft_h4845f30_101
   - tqdm=4.66.2=pyhd8ed1ab_0
@@ -78,10 +165,14 @@ dependencies:
   - typing-extensions=4.10.0=hd8ed1ab_0
   - typing_extensions=4.10.0=pyha770c72_0
   - tzdata=2024a=h0c530f3_0
+  - ucx=1.15.0=h6d2d1ec_3
   - urllib3=2.2.1=pyhd8ed1ab_0
   - wasabi=1.1.2=py311h38be061_0
   - weasel=0.3.4=pyhd8ed1ab_0
   - wheel=0.42.0=pyhd8ed1ab_0
   - xz=5.2.6=h166bdaf_0
   - zipp=3.17.0=pyhd8ed1ab_0
+  - zstd=1.5.5=hfc55251_0
+  - pip:
+      - en-core-web-sm==3.7.1
 prefix: /scratch/users/ijyliu/conda/envs/capstone_scf
