--- a/environment_scf.yml
+++ b/environment_scf.yml
@@ -4,7 +4,11 @@ channels:
 dependencies:
   - _libgcc_mutex=0.1=conda_forge
   - _openmp_mutex=4.5=2_kmp_llvm
+  - alsa-lib=1.2.11=hd590300_1
   - annotated-types=0.6.0=pyhd8ed1ab_0
+  - asttokens=2.4.1=pyhd8ed1ab_0
+  - attr=2.5.1=h166bdaf_1
+  - attrs=23.2.0=pyh71513ae_0
   - aws-c-auth=0.7.16=h79b3bcb_6
   - aws-c-cal=0.6.10=hb29e0c7_1
   - aws-c-common=0.9.13=hd590300_0
@@ -18,41 +22,90 @@ dependencies:
   - aws-checksums=0.1.18=hecc5fa9_1
   - aws-crt-cpp=0.26.2=h19f5d62_7
   - aws-sdk-cpp=1.11.267=h5606698_1
+  - beautifulsoup4=4.12.3=pyha770c72_0
+  - bleach=6.1.0=pyhd8ed1ab_0
+  - brotli=1.1.0=hd590300_1
+  - brotli-bin=1.1.0=hd590300_1
   - brotli-python=1.1.0=py311hb755f60_1
   - bzip2=1.0.8=hd590300_5
   - c-ares=1.27.0=hd590300_0
   - ca-certificates=2024.2.2=hbcca054_0
+  - cairo=1.18.0=h3faef2a_0
   - catalogue=2.0.10=py311h38be061_0
   - certifi=2024.2.2=pyhd8ed1ab_0
   - charset-normalizer=3.3.2=pyhd8ed1ab_0
   - click=8.1.7=unix_pyh707e725_0
   - cloudpathlib=0.16.0=pyhd8ed1ab_0
   - colorama=0.4.6=pyhd8ed1ab_0
+  - comm=0.2.2=pyhd8ed1ab_0
   - confection=0.1.4=py311h781c19f_0
+  - contourpy=1.2.0=py311h9547e67_0
   - cuda-cudart=12.4.99=hd3aeb46_0
   - cuda-cudart_linux-64=12.4.99=h59595ed_0
   - cuda-nvrtc=12.4.99=hd3aeb46_0
+  - cuda-python=12.4.0=py311h7f239a6_1
   - cuda-version=12.4=h3060b56_3
   - cupy=13.0.0=py311h8a5e998_3
   - cupy-core=13.0.0=py311h84cfafc_3
+  - cycler=0.12.1=pyhd8ed1ab_0
   - cymem=2.0.8=py311hb755f60_1
   - cython-blis=0.7.10=py311h1f0f07a_2
   - dataclasses=0.8=pyhc8e2a94_3
+  - dbus=1.13.6=h5008d03_3
+  - debugpy=1.8.1=py311hb755f60_0
+  - decorator=5.1.1=pyhd8ed1ab_0
+  - defusedxml=0.7.1=pyhd8ed1ab_0
+  - entrypoints=0.4=pyhd8ed1ab_0
+  - et_xmlfile=1.1.0=pyhd8ed1ab_0
+  - exceptiongroup=1.2.0=pyhd8ed1ab_2
+  - executing=2.0.1=pyhd8ed1ab_0
+  - expat=2.6.1=h59595ed_0
   - fastrlock=0.8.2=py311hb755f60_2
   - filelock=3.13.1=pyhd8ed1ab_0
+  - font-ttf-dejavu-sans-mono=2.37=hab24e00_0
+  - font-ttf-inconsolata=3.000=h77eed37_0
+  - font-ttf-source-code-pro=2.038=h77eed37_0
+  - font-ttf-ubuntu=0.83=h77eed37_1
+  - fontconfig=2.14.2=h14ed4e7_0
+  - fonts-conda-ecosystem=1=0
+  - fonts-conda-forge=1=0
+  - fonttools=4.49.0=py311h459d7ec_0
+  - freetype=2.12.1=h267a509_2
   - fsspec=2024.2.0=pyhca7485f_0
+  - gensim=4.3.2=py311h320fe9a_1
+  - gettext=0.21.1=h27087fc_0
   - gflags=2.2.2=he1b5a44_1004
+  - glib=2.80.0=hf2295e7_0
+  - glib-tools=2.80.0=hde27a5a_0
   - glog=0.7.0=hed5481d_0
   - gmp=6.3.0=h59595ed_0
   - gmpy2=2.1.2=py311h6a5fa03_1
+  - graphite2=1.3.13=h58526e2_1001
+  - gst-plugins-base=1.22.9=h8e1006c_0
+  - gstreamer=1.22.9=h98fc4e7_0
+  - harfbuzz=8.3.0=h3d44ed6_0
   - icu=73.2=h59595ed_0
   - idna=3.6=pyhd8ed1ab_0
   - importlib-metadata=7.0.2=pyha770c72_0
+  - importlib_metadata=7.0.2=hd8ed1ab_0
+  - importlib_resources=6.4.0=pyhd8ed1ab_0
+  - ipykernel=6.29.3=pyhd33586a_0
+  - ipython=8.22.2=pyh707e725_0
+  - jedi=0.19.1=pyhd8ed1ab_0
   - jinja2=3.1.3=pyhd8ed1ab_0
+  - joblib=1.3.2=pyhd8ed1ab_0
+  - jsonschema-specifications=2023.12.1=pyhd8ed1ab_0
+  - jupyter_client=8.6.1=pyhd8ed1ab_0
+  - jupyter_core=5.7.2=py311h38be061_0
+  - jupyterlab_pygments=0.3.0=pyhd8ed1ab_1
   - keyutils=1.6.1=h166bdaf_0
+  - kiwisolver=1.4.5=py311h9547e67_1
   - krb5=1.21.2=h659d440_0
+  - lame=3.100=h166bdaf_1003
   - langcodes=3.3.0=pyhd8ed1ab_0
+  - lcms2=2.16=hb7c19ff_0
   - ld_impl_linux-64=2.40=h41732ed_0
+  - lerc=4.0.0=h27087fc_0
   - libabseil=20230802.1=cxx17_h59595ed_0
   - libarrow=15.0.0=h17fe1ab_6_cpu
   - libarrow-acero=15.0.0=h59595ed_6_cpu
@@ -65,114 +118,385 @@ dependencies:
   - libbrotlicommon=1.1.0=hd590300_1
   - libbrotlidec=1.1.0=hd590300_1
   - libbrotlienc=1.1.0=hd590300_1
+  - libcap=2.69=h0f662aa_0
   - libcblas=3.9.0=21_linux64_openblas
+  - libclang=15.0.7=default_hb11cfb5_4
+  - libclang13=15.0.7=default_ha2b6cf4_4
   - libcrc32c=1.1.2=h9c3ff4c_0
   - libcublas=12.4.2.65=hd3aeb46_0
   - libcufft=11.2.0.44=hd3aeb46_0
+  - libcups=2.3.3=h4637d8d_4
   - libcurand=10.3.5.119=hd3aeb46_0
   - libcurl=8.5.0=hca28451_0
   - libcusolver=11.6.0.99=hd3aeb46_0
   - libcusparse=12.3.0.142=hd3aeb46_0
+  - libdeflate=1.19=hd590300_0
   - libedit=3.1.20191231=he28a2e2_2
   - libev=4.33=hd590300_2
   - libevent=2.1.12=hf998b51_1
   - libexpat=2.6.1=h59595ed_0
   - libffi=3.4.2=h7f98852_5
+  - libflac=1.4.3=h59595ed_0
   - libgcc-ng=13.2.0=h807b86a_5
+  - libgcrypt=1.10.3=hd590300_0
   - libgfortran-ng=13.2.0=h69a702a_5
   - libgfortran5=13.2.0=ha4646dd_5
+  - libglib=2.80.0=hf2295e7_0
   - libgomp=13.2.0=h807b86a_5
   - libgoogle-cloud=2.17.0=h31df0ca_2
   - libgoogle-cloud-storage=2.17.0=hc7a4891_2
+  - libgpg-error=1.48=h71f35ed_0
   - libgrpc=1.60.1=h74775cd_0
   - libhwloc=2.9.3=default_h554bfaf_1009
   - libiconv=1.17=hd590300_2
+  - libjpeg-turbo=3.0.0=hd590300_1
   - liblapack=3.9.0=21_linux64_openblas
+  - libllvm15=15.0.7=hb3ce162_4
   - libllvm16=16.0.6=hb3ce162_3
   - libnghttp2=1.58.0=h47da74e_1
   - libnl=3.9.0=hd590300_0
   - libnsl=2.0.1=hd590300_0
   - libnuma=2.0.16=h0b41bf4_1
   - libnvjitlink=12.4.99=hd3aeb46_0
+  - libogg=1.3.4=h7f98852_1
   - libopenblas=0.3.26=pthreads_h413a1c8_0
+  - libopus=1.3.1=h7f98852_1
   - libparquet=15.0.0=h352af49_6_cpu
+  - libpng=1.6.43=h2797004_0
+  - libpq=16.2=h33b98f1_0
   - libprotobuf=4.25.1=hf27288f_2
   - libre2-11=2023.09.01=h7a70373_1
+  - libsndfile=1.2.2=hc60ed4a_1
+  - libsodium=1.0.18=h36c2ea0_1
   - libsqlite=3.45.1=h2797004_0
   - libssh2=1.11.0=h0841786_0
   - libstdcxx-ng=13.2.0=h7e041cc_5
+  - libsystemd0=255=h3516f8a_1
   - libthrift=0.19.0=hb90f79a_1
+  - libtiff=4.6.0=ha9c0a0a_2
   - libtorch=2.1.2=cpu_mkl_hcefb67d_101
   - libutf8proc=2.8.0=h166bdaf_0
   - libuuid=2.38.1=h0b41bf4_0
   - libuv=1.48.0=hd590300_0
+  - libvorbis=1.3.7=h9c3ff4c_0
+  - libwebp-base=1.3.2=hd590300_0
+  - libxcb=1.15=h0b41bf4_0
   - libxcrypt=4.4.36=hd590300_1
+  - libxkbcommon=1.6.0=hd429924_1
   - libxml2=2.12.5=h232c23b_0
   - libzlib=1.2.13=hd590300_5
   - llvm-openmp=17.0.6=h4dfa4b3_0
   - lz4-c=1.9.4=hcb278e6_0
   - markdown-it-py=3.0.0=pyhd8ed1ab_0
   - markupsafe=2.1.5=py311h459d7ec_0
+  - matplotlib=3.8.3=py311h38be061_0
+  - matplotlib-base=3.8.3=py311h54ef318_0
+  - matplotlib-inline=0.1.6=pyhd8ed1ab_0
   - mdurl=0.1.2=pyhd8ed1ab_0
+  - mistune=3.0.2=pyhd8ed1ab_0
   - mkl=2023.2.0=h84fe81f_50496
   - mpc=1.3.1=hfe3b2da_0
   - mpfr=4.2.1=h9458935_0
+  - mpg123=1.32.4=h59595ed_0
   - mpmath=1.3.0=pyhd8ed1ab_0
+  - munkres=1.1.4=pyh9f0ad1d_0
   - murmurhash=1.0.10=py311hb755f60_1
+  - mysql-common=8.0.33=hf1915f5_6
+  - mysql-libs=8.0.33=hca2cd23_6
+  - nbclient=0.10.0=pyhd8ed1ab_0
+  - nbconvert=7.16.3=hd8ed1ab_0
+  - nbconvert-core=7.16.3=pyhd8ed1ab_0
+  - nbconvert-pandoc=7.16.3=hd8ed1ab_0
+  - nbformat=5.10.3=pyhd8ed1ab_0
   - ncurses=6.4=h59595ed_2
+  - nest-asyncio=1.6.0=pyhd8ed1ab_0
   - networkx=3.2.1=pyhd8ed1ab_0
+  - nltk=3.8.1=pyhd8ed1ab_0
+  - nspr=4.35=h27087fc_0
+  - nss=3.98=h1d7d5a4_0
   - numpy=1.26.4=py311h64a7726_0
-  - openssl=3.2.1=hd590300_0
+  - openjpeg=2.5.2=h488ebb8_0
+  - openpyxl=3.1.2=py311h459d7ec_1
+  - openssl=3.2.1=hd590300_1
   - orc=1.9.2=h7829240_1
   - packaging=23.2=pyhd8ed1ab_0
-  - pandas=2.2.1=py311h320fe9a_0
+  - pandoc=3.1.12.3=ha770c72_0
+  - pandocfilters=1.5.0=pyhd8ed1ab_0
+  - parso=0.8.3=pyhd8ed1ab_0
   - pathy=0.10.2=pyhd8ed1ab_0
+  - patsy=0.5.6=pyhd8ed1ab_0
+  - pcre2=10.43=hcad00b1_0
+  - pexpect=4.9.0=pyhd8ed1ab_0
+  - pickleshare=0.7.5=py_1003
+  - pillow=10.2.0=py311ha6c5da5_0
   - pip=24.0=pyhd8ed1ab_0
+  - pixman=0.43.2=h59595ed_0
+  - pkgutil-resolve-name=1.3.10=pyhd8ed1ab_1
+  - ply=3.11=py_1
   - preshed=3.0.9=py311hb755f60_1
+  - prompt-toolkit=3.0.42=pyha770c72_0
+  - psutil=5.9.8=py311h459d7ec_0
+  - pthread-stubs=0.4=h36c2ea0_1001
+  - ptyprocess=0.7.0=pyhd3deb0d_0
+  - pulseaudio-client=16.1=hb77b528_5
+  - pure_eval=0.2.2=pyhd8ed1ab_0
   - pyarrow=15.0.0=py311h39c9aba_6_cpu
-  - pydantic=2.6.3=pyhd8ed1ab_0
   - pydantic-core=2.16.3=py311h46250e7_0
   - pygments=2.17.2=pyhd8ed1ab_0
+  - pyparsing=3.1.2=pyhd8ed1ab_0
+  - pyqt=5.15.9=py311hf0fb5b6_5
+  - pyqt5-sip=12.12.2=py311hb755f60_5
   - pysocks=1.7.1=pyha2e5f31_6
   - python=3.11.8=hab00c5b_0_cpython
   - python-dateutil=2.9.0=pyhd8ed1ab_0
+  - python-fastjsonschema=2.19.1=pyhd8ed1ab_0
   - python-tzdata=2024.1=pyhd8ed1ab_0
+  - python-utils=3.8.2=pyhd8ed1ab_0
   - python_abi=3.11=4_cp311
-  - pytorch=2.1.2=cpu_mkl_py311hc5c8824_101
-  - pytz=2024.1=pyhd8ed1ab_0
+  - pyzmq=25.1.2=py311h34ded2d_0
+  - qt-main=5.15.8=h5810be5_19
   - rdma-core=50.0=hd3aeb46_0
   - re2=2023.09.01=h7f4b329_1
   - readline=8.2=h8228510_1
-  - requests=2.31.0=pyhd8ed1ab_0
-  - rich=13.7.1=pyhd8ed1ab_0
+  - referencing=0.34.0=pyhd8ed1ab_0
+  - regex=2023.12.25=py311h459d7ec_0
+  - rpds-py=0.18.0=py311h46250e7_0
   - s2n=1.4.5=h06160fa_0
-  - setuptools=69.1.1=pyhd8ed1ab_0
+  - scikit-learn=1.4.1.post1=py311hc009520_0
+  - scipy=1.12.0=py311h64a7726_2
+  - seaborn=0.13.2=hd8ed1ab_0
+  - seaborn-base=0.13.2=pyhd8ed1ab_0
   - shellingham=1.5.4=pyhd8ed1ab_0
+  - sip=6.7.12=py311hb755f60_0
   - six=1.16.0=pyh6c4a22f_0
   - sleef=3.5.1=h9b69904_2
   - smart_open=5.2.1=pyhd8ed1ab_0
   - snappy=1.1.10=h9fff704_0
+  - soupsieve=2.5=pyhd8ed1ab_1
   - spacy=3.7.2=py311h92ebd52_0
   - spacy-legacy=3.0.12=pyhd8ed1ab_0
   - spacy-loggers=1.0.5=pyhd8ed1ab_0
   - srsly=2.4.8=py311hb755f60_1
+  - stack_data=0.6.2=pyhd8ed1ab_0
+  - statsmodels=0.14.1=py311h1f0f07a_0
   - sympy=1.12=pypyh9d50eac_103
   - tbb=2021.11.0=h00ab1b0_1
+  - testfixtures=8.1.0=pyhd8ed1ab_0
   - thinc=8.2.2=py311h92ebd52_0
+  - threadpoolctl=3.4.0=pyhc1e730c_0
+  - tinycss2=1.2.1=pyhd8ed1ab_0
   - tk=8.6.13=noxft_h4845f30_101
-  - tqdm=4.66.2=pyhd8ed1ab_0
+  - toml=0.10.2=pyhd8ed1ab_0
+  - tomli=2.0.1=pyhd8ed1ab_0
+  - tornado=6.4=py311h459d7ec_0
+  - traitlets=5.14.2=pyhd8ed1ab_0
   - typer=0.9.0=pyhd8ed1ab_0
   - typing-extensions=4.10.0=hd8ed1ab_0
   - typing_extensions=4.10.0=pyha770c72_0
   - tzdata=2024a=h0c530f3_0
   - ucx=1.15.0=h6d2d1ec_3
-  - urllib3=2.2.1=pyhd8ed1ab_0
   - wasabi=1.1.2=py311h38be061_0
+  - wcwidth=0.2.13=pyhd8ed1ab_0
   - weasel=0.3.4=pyhd8ed1ab_0
+  - webencodings=0.5.1=pyhd8ed1ab_2
   - wheel=0.42.0=pyhd8ed1ab_0
+  - xcb-util=0.4.0=hd590300_1
+  - xcb-util-image=0.4.0=h8ee46fc_1
+  - xcb-util-keysyms=0.4.0=h8ee46fc_1
+  - xcb-util-renderutil=0.3.9=hd590300_1
+  - xcb-util-wm=0.4.1=h8ee46fc_1
+  - xkeyboard-config=2.41=hd590300_0
+  - xorg-kbproto=1.0.7=h7f98852_1002
+  - xorg-libice=1.1.1=hd590300_0
+  - xorg-libsm=1.2.4=h7391055_0
+  - xorg-libx11=1.8.7=h8ee46fc_0
+  - xorg-libxau=1.0.11=hd590300_0
+  - xorg-libxdmcp=1.1.3=h7f98852_0
+  - xorg-libxext=1.3.4=h0b41bf4_2
+  - xorg-libxrender=0.9.11=hd590300_0
+  - xorg-renderproto=0.11.1=h7f98852_1002
+  - xorg-xextproto=7.3.0=h0b41bf4_1003
+  - xorg-xf86vidmodeproto=2.3.1=h7f98852_1002
+  - xorg-xproto=7.0.31=h7f98852_1007
   - xz=5.2.6=h166bdaf_0
+  - zeromq=4.3.5=h59595ed_1
   - zipp=3.17.0=pyhd8ed1ab_0
+  - zlib=1.2.13=hd590300_5
   - zstd=1.5.5=hfc55251_0
   - pip:
+      - absl-py==2.1.0
+      - accelerate==0.21.0
+      - aiohttp==3.9.3
+      - aiohttp-cors==0.7.0
+      - aiosignal==1.3.1
+      - aliyun-python-sdk-core==2.15.0
+      - aliyun-python-sdk-kms==2.16.2
+      - antlr4-python3-runtime==4.9.3
+      - anyio==4.3.0
+      - arrow==1.3.0
+      - async-timeout==4.0.3
+      - autogluon==1.0.0
+      - autogluon-common==1.0.0
+      - autogluon-core==1.0.0
+      - autogluon-features==1.0.0
+      - autogluon-multimodal==1.0.0
+      - autogluon-tabular==1.0.0
+      - autogluon-timeseries==1.0.0
+      - backoff==2.2.1
+      - blessed==1.20.0
+      - boto3==1.34.69
+      - botocore==1.34.69
+      - cachetools==5.3.3
+      - catboost==1.2.3
+      - cffi==1.16.0
+      - cloudpickle==3.0.0
+      - cmake==3.28.4
+      - colorful==0.5.6
+      - crcmod==1.7
+      - croniter==1.4.1
+      - cryptography==42.0.5
+      - curated-tokenizers==0.0.9
+      - curated-transformers==0.1.1
+      - datasets==2.18.0
+      - dateutils==0.6.12
+      - deepdiff==6.7.1
+      - dill==0.3.8
+      - distlib==0.3.8
+      - editor==1.6.6
       - en-core-web-sm==3.7.1
+      - en-core-web-trf==3.7.3
+      - evaluate==0.4.1
+      - fastai==2.7.14
+      - fastapi==0.110.0
+      - fastcore==1.5.29
+      - fastdownload==0.0.7
+      - fastprogress==1.0.3
+      - frozenlist==1.4.1
+      - future==1.0.0
+      - gdown==5.1.0
+      - gluonts==0.14.4
+      - google-api-core==2.18.0
+      - google-auth==2.29.0
+      - googleapis-common-protos==1.63.0
+      - gpustat==1.1.1
+      - grpcio==1.62.1
+      - h11==0.14.0
+      - huggingface-hub==0.21.4
+      - hyperopt==0.2.7
+      - imageio==2.34.0
+      - inquirer==3.2.4
+      - itsdangerous==2.1.2
+      - jmespath==0.10.0
+      - jsonschema==4.17.3
+      - lazy-loader==0.3
+      - lightgbm==4.1.0
+      - lightning==2.0.9.post0
+      - lightning-cloud==0.5.65
+      - lightning-utilities==0.11.0
+      - lit==18.1.2
+      - llvmlite==0.42.0
+      - markdown==3.6
+      - mlforecast==0.10.0
+      - model-index==0.1.11
+      - msgpack==1.0.8
+      - multidict==6.0.5
+      - multiprocess==0.70.16
+      - nlpaug==1.1.11
+      - nptyping==2.4.1
+      - numba==0.59.1
+      - nvidia-cublas-cu11==11.10.3.66
+      - nvidia-cuda-cupti-cu11==11.7.101
+      - nvidia-cuda-nvrtc-cu11==11.7.99
+      - nvidia-cuda-runtime-cu11==11.7.99
+      - nvidia-cudnn-cu11==8.5.0.96
+      - nvidia-cufft-cu11==10.9.0.58
+      - nvidia-curand-cu11==10.2.10.91
+      - nvidia-cusolver-cu11==11.4.0.1
+      - nvidia-cusparse-cu11==11.7.4.91
+      - nvidia-ml-py==12.535.133
+      - nvidia-ml-py3==7.352.0
+      - nvidia-nccl-cu11==2.14.3
+      - nvidia-nvtx-cu11==11.7.91
+      - omegaconf==2.2.3
+      - opencensus==0.11.4
+      - opencensus-context==0.1.3
+      - opencv-python==4.9.0.80
+      - opendatalab==0.0.10
+      - openmim==0.3.9
+      - openxlab==0.0.37
+      - ordered-set==4.1.0
+      - orjson==3.9.15
+      - oss2==2.17.0
+      - pandas==2.1.4
+      - platformdirs==3.11.0
+      - plotly==5.20.0
+      - prometheus-client==0.20.0
+      - proto-plus==1.23.0
+      - protobuf==4.25.3
+      - py-spy==0.3.14
+      - py4j==0.10.9.7
+      - pyarrow-hotfix==0.6
+      - pyasn1==0.5.1
+      - pyasn1-modules==0.3.0
+      - pycparser==2.21
+      - pycryptodome==3.20.0
+      - pydantic==1.10.14
+      - pyjwt==2.8.0
+      - pyrsistent==0.20.0
+      - pytesseract==0.3.10
+      - python-graphviz==0.20.3
+      - python-multipart==0.0.9
+      - pytorch-lightning==2.0.9.post0
+      - pytorch-metric-learning==1.7.3
+      - pytz==2023.4
+      - pywavelets==1.5.0
+      - pyyaml==6.0.1
+      - ray==2.6.3
+      - readchar==4.0.6
+      - requests==2.28.2
+      - responses==0.18.0
+      - rich==13.4.2
+      - rsa==4.9
+      - runs==1.2.2
+      - s3transfer==0.10.1
+      - safetensors==0.4.2
+      - scikit-image==0.20.0
+      - sentence-transformers==2.6.0
+      - sentencepiece==0.2.0
+      - seqeval==1.2.2
+      - setuptools==60.2.0
+      - sniffio==1.3.1
+      - spacy-curated-transformers==0.2.2
+      - starlette==0.36.3
+      - starsessions==1.3.0
+      - statsforecast==1.4.0
+      - tabulate==0.9.0
+      - tenacity==8.2.3
+      - tensorboard==2.16.2
+      - tensorboard-data-server==0.7.2
+      - tensorboardx==2.6.2.2
+      - text-unidecode==1.3
+      - tifffile==2024.2.12
+      - timm==0.9.16
+      - tokenizers==0.15.2
+      - toolz==0.12.1
+      - torch==2.0.1
+      - torchmetrics==1.1.2
+      - torchvision==0.15.2
+      - tqdm==4.65.2
+      - transformers==4.39.1
+      - triton==2.0.0
+      - types-python-dateutil==2.9.0.20240316
+      - urllib3==1.26.18
+      - utilsforecast==0.0.10
+      - uvicorn==0.29.0
+      - virtualenv==20.21.0
+      - websocket-client==1.7.0
+      - websockets==12.0
+      - werkzeug==3.0.1
+      - window-ops==0.0.15
+      - xgboost==2.0.3
+      - xmod==1.8.1
+      - xxhash==3.4.1
+      - yarl==1.9.4
 prefix: /scratch/users/ijyliu/conda/envs/scf_general
